checked for similar corners

--- a/document-scanner.ipynb
+++ b/document-scanner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "# from pyimagesearch.transform import four_point_transform\n",
     "import numpy as np\n",
     "import random as rng\n",
+    "from math import sqrt\n",
     "from matplotlib import pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,28 +66,58 @@
     "  a1, b1, c1 = coeff_1\n",
     "  a2, b2, c2 = coeff_2\n",
     "\n",
+    "  print(coeff_1, coeff_2)\n",
+    "\n",
     "  x = 0 \n",
     "  y = 0\n",
     "\n",
+    "  det = a1 * b2 - a2 * b1\n",
+    "\n",
     "  x_num = b1 * c2 - b2 * c1\n",
-    "  x_den = a1 * b2 - a2 * b1\n",
     "\n",
     "  y_num = c1 * a2 - c2 * a1\n",
-    "  y_den = a1 * b2 - a2 * b1\n",
     "\n",
-    "  if x_den != 0:\n",
-    "    x = x_num / x_den\n",
+    "  # lines are approximately parallel \n",
+    "  if det > -0.5 and det < 0.5:\n",
+    "    return None\n",
     "  \n",
-    "  if y_den != 0:\n",
-    "    y = y_num / y_den\n",
+    "\n",
+    "  if det != 0:\n",
+    "    x = x_num / det\n",
+    "    y = y_num / det\n",
+    "    print(\"lines not parallel: \", coeff_1, coeff_2)\n",
+    "    print(\"det: \",det)\n",
+    "    print(\"corner: \", (x,y))\n",
+    "    return (x, y)\n",
     "  \n",
-    "  return (x, y)\n",
-    "  \n"
+    "  return None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def distance_between_points(p1: tuple, p2: tuple):\n",
+    "  x1, y1 = p1\n",
+    "  x2, y2, = p2\n",
+    "  return sqrt((x2 - x1)**2 + (y2 - y1)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def are_similar_corners(c1: tuple, c2: tuple): \n",
+    "  return True if distance_between_points(c1, c2) < 5 else False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,34 +160,66 @@
     "      l = line[0]\n",
     "      cv2.line(output, (l[0], l[1]), (l[2], l[3]), (0,255,0), 2, cv2.LINE_AA )\n",
     "  \n",
+    "  print(\"lines\", len(lines))\n",
     "\n",
     "  # if at any point there are exactly four lines forming a quad\n",
-    "  if len(lines) == 4:\n",
+    "  # TODO: make it work even if there are a minimum of 4 lines\n",
+    "  if len(lines) >= 4:\n",
     "    coefficients = []\n",
     "    for line in lines:\n",
     "      l = line[0]\n",
     "      coefficients.append(get_line_coefficients((l[0], l[1]), (l[2], l[3])))\n",
     "  \n",
-    "    corners = []\n",
+    "    all_corners = []\n",
     "\n",
     "    rows, cols = grayscale.shape\n",
     "\n",
     "    # for every combination of coeffs get the intersection points\n",
     "    for i in range(len(coefficients)):\n",
     "      for j in range(i, len(coefficients)):\n",
-    "\n",
-    "        int_point = get_intersection_points(coefficients[i], coefficients[j])\n",
-    "\n",
-    "        x, y = int_point\n",
-    "\n",
-    "        # coords should be within the image boundaries\n",
-    "        if x > 0 and y > 0 and x < cols and y < rows:\n",
-    "          cv2.circle(output, (int(x), int(y)),3, (0, 0, 255), 4) \n",
-    "          corners.append(int_point)\n",
+    "        if(i != j): \n",
     "        \n",
-    "    print(\"corners: \", corners)\n",
+    "          int_point = get_intersection_points(coefficients[i], coefficients[j])\n",
     "\n",
+    "          print(\"------------------------------------------\")\n",
     "\n",
+    "          if int_point != None: \n",
+    "            x, y = int_point\n",
+    "            # coords should be within the image boundaries\n",
+    "            if x > 0 and y > 0 and x < cols and y < rows:\n",
+    "              all_corners.append(int_point)\n",
+    "    \n",
+    "\n",
+    "    corners = []\n",
+    "\n",
+    "    # check for similar corners by computing the distance between the corners\n",
+    "\n",
+    "    # get one corner\n",
+    "    for i in range(len(all_corners)): \n",
+    "      # check with all other corners\n",
+    "      similar_corner = False\n",
+    "      for j in range(len(all_corners)): \n",
+    "        # if we have checked all corners upto this one then break\n",
+    "        if i == j:\n",
+    "          break\n",
+    "        # if corner is similar to any of the previous corners then we do not add this corner\n",
+    "        if are_similar_corners(all_corners[i], all_corners[j]): \n",
+    "          similar_corner = True\n",
+    "          break\n",
+    "      if not similar_corner:\n",
+    "        corners.append(all_corners[i])\n",
+    "    \n",
+    "    print(\"FINAL CORNERS: \", len(corners), corners)\n",
+    "\n",
+    "    if len(corners) != 4:\n",
+    "      print(\"corner length not equal to 4\")\n",
+    "      return\n",
+    "\n",
+    "    # draw corner points on the image\n",
+    "    for x, y in corners:\n",
+    "      cv2.circle(output, (int(x), int(y)),3, (0, 0, 255), 4)\n",
+    "\n",
+    "    \n",
     "  cv2.imshow('Corners', output)\n",
     "  cv2.waitKey(10)\n",
     "\n",
@@ -166,14 +229,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "corners:  [(302.82718046771583, 105.01088395352258), (70.4431654676259, 101.95319954562666), (362.9244585314316, 448.9719009564914), (31.33740541205628, 459.0505347899071)]\n"
+      "lines 4\n",
+      "(-3, 228, -23034) (-269, 47, 76525)\n",
+      "lines not parallel:  (-3, 228, -23034) (-269, 47, 76525)\n",
+      "det:  61191\n",
+      "corner:  (302.82718046771583, 105.01088395352258)\n",
+      "------------------------------------------\n",
+      "(-3, 228, -23034) (347, 38, -28318)\n",
+      "lines not parallel:  (-3, 228, -23034) (347, 38, -28318)\n",
+      "det:  -79230\n",
+      "corner:  (70.4431654676259, 101.95319954562666)\n",
+      "------------------------------------------\n",
+      "(-3, 228, -23034) (10, 329, -151341)\n",
+      "lines not parallel:  (-3, 228, -23034) (10, 329, -151341)\n",
+      "det:  -3267\n",
+      "corner:  (8242.290174471993, 209.4775022956841)\n",
+      "------------------------------------------\n",
+      "(-269, 47, 76525) (347, 38, -28318)\n",
+      "lines not parallel:  (-269, 47, 76525) (347, 38, -28318)\n",
+      "det:  -26531\n",
+      "corner:  (159.77143718668728, -713.7549658889601)\n",
+      "------------------------------------------\n",
+      "(-269, 47, 76525) (10, 329, -151341)\n",
+      "lines not parallel:  (-269, 47, 76525) (10, 329, -151341)\n",
+      "det:  -88971\n",
+      "corner:  (362.9244585314316, 448.9719009564914)\n",
+      "------------------------------------------\n",
+      "(347, 38, -28318) (10, 329, -151341)\n",
+      "lines not parallel:  (347, 38, -28318) (10, 329, -151341)\n",
+      "det:  113783\n",
+      "corner:  (31.33740541205628, 459.0505347899071)\n",
+      "------------------------------------------\n",
+      "FINAL CORNERS:  4 [(302.82718046771583, 105.01088395352258), (70.4431654676259, 101.95319954562666), (362.9244585314316, 448.9719009564914), (31.33740541205628, 459.0505347899071)]\n"
      ]
     }
    ],
@@ -183,17 +277,20 @@
     "input_grey = cv2.GaussianBlur(input_grey, (3,3), 0)\n",
     "ret, input_grey = cv2.threshold(input_grey, 130, 200, cv2.THRESH_BINARY)\n",
     "\n",
+    "img_copy = input_img.copy()\n",
+    "\n",
     "edges = cv2.Canny(input_grey, 83, 300)\n",
     "\n",
     "cv2.imshow('Canny', edges)\n",
     "cv2.waitKey(10)\n",
     "\n",
-    "corners = get_corners(edges, input_img)\n"
+    "corners = get_corners(edges, input_img)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,9 +358,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'org' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb Cell 9'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000009?line=0'>1</a>\u001b[0m \u001b[39m# apply four point transform to extract the document rectangle\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000009?line=1'>2</a>\u001b[0m warped \u001b[39m=\u001b[39m four_point_transform(org, doc\u001b[39m.\u001b[39mreshape(\u001b[39m4\u001b[39m, \u001b[39m2\u001b[39m) \u001b[39m*\u001b[39m ratio)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000009?line=2'>3</a>\u001b[0m warped \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mcvtColor(warped, cv2\u001b[39m.\u001b[39mCOLOR_BGR2GRAY)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000009?line=3'>4</a>\u001b[0m cv2\u001b[39m.\u001b[39mimshow(\u001b[39m\"\u001b[39m\u001b[39mWarped\u001b[39m\u001b[39m\"\u001b[39m, imutils\u001b[39m.\u001b[39mresize(warped, height \u001b[39m=\u001b[39m \u001b[39m650\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'org' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# apply four point transform to extract the document rectangle\n",
     "warped = four_point_transform(org, doc.reshape(4, 2) * ratio)\n",
