--- a/document-scanner.ipynb
+++ b/document-scanner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,28 +220,41 @@
     "    # remove corners that are similar to one corner\n",
     "    corners = remove_similar_corners(all_corners)\n",
     "    \n",
-    "    if len(corners) != 4:\n",
-    "      print(\"corner length not equal to 4\")\n",
-    "      return\n",
-    "    \n",
-    "    print(\"FINAL CORNERS: \", corners)\n",
-    "\n",
-    "\n",
-    "    # draw corner points on the image\n",
-    "    for x, y in corners:\n",
-    "      cv2.circle(output, (int(x), int(y)),3, (0, 0, 255), 4)\n",
+    "    return corners\n",
     "\n",
     "    \n",
-    "  cv2.imshow('Corners', output)\n",
-    "  cv2.waitKey(10)\n",
-    "\n",
-    "  \n",
-    "\n"
+    "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def perspective_transform(corners): \n",
+    "  # perform image transformation\n",
+    "  warped_rows = 842\n",
+    "  warped_cols = 595\n",
+    "\n",
+    "  warped_points = np.array([[0, 0], [0, warped_rows], [warped_cols, warped_rows], [warped_cols, 0]], np.float32)\n",
+    "\n",
+    "  ordered_corners = order_points(corners)\n",
+    "\n",
+    "  warped_input = input_img.copy()\n",
+    "\n",
+    "  if(len(ordered_corners) == 4):\n",
+    "    print('corners', ordered_corners)\n",
+    "    homography = cv2.findHomography(ordered_corners, warped_points)[0]\n",
+    "    warped_result = cv2.warpPerspective(warped_input,homography, (warped_cols, warped_rows))\n",
+    "    cv2.imshow(\"warp input: \", warped_input)\n",
+    "    cv2.imshow(\"Transformed Image\", warped_result)\n",
+    "    cv2.waitKey(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -250,6 +263,16 @@
      "text": [
       "FINAL CORNERS:  [(11.0, 33.077922077922075), (11.0, 497.0), (357.1346747999683, 28.58266656103937), (342.8536585365854, 497.0)]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -266,6 +289,24 @@
     "cv2.waitKey(10)\n",
     "\n",
     "corners = get_corners(edges, input_img)\n",
+    "\n",
+    "if len(corners) != 4:\n",
+    "  print(\"corner length not equal to 4\")\n",
+    "  \n",
+    "    \n",
+    "print(\"FINAL CORNERS: \", corners)\n",
+    "\n",
+    "\n",
+    "    # draw corner points on the image\n",
+    "for x, y in corners:\n",
+    "    cv2.circle(input_img, (int(x), int(y)),3, (0, 0, 255), 4)\n",
+    "\n",
+    "cv2.imshow('Corners', input_img)\n",
+    "cv2.waitKey(10)\n",
+    "\n",
+    "# perspective_transform(corners)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
