added order points" "

--- a/document-scanner.ipynb
+++ b/document-scanner.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import imutils\n",
     "from skimage.filters import threshold_local\n",
+    "from scipy.spatial import distance as dist\n",
     "# from pyimagesearch.transform import four_point_transform\n",
     "import numpy as np\n",
     "import random as rng\n",
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,15 +221,43 @@
     "    # remove corners that are similar to one corner\n",
     "    corners = remove_similar_corners(all_corners)\n",
     "    \n",
-    "    return corners\n",
-    "\n",
-    "    \n",
-    "  "
+    "    return corners\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def order_points(pts):\n",
+    "\t# sort the points based on their x-coordinates\n",
+    "\txSorted = pts[np.argsort(pts[:, 0]), :]\n",
+    "\t# grab the left-most and right-most points from the sorted\n",
+    "\t# x-roodinate points\n",
+    "\tleftMost = xSorted[:2, :]\n",
+    "\trightMost = xSorted[2:, :]\n",
+    "\t# now, sort the left-most coordinates according to their\n",
+    "\t# y-coordinates so we can grab the top-left and bottom-left\n",
+    "\t# points, respectively\n",
+    "\tleftMost = leftMost[np.argsort(leftMost[:, 1]), :]\n",
+    "\t(tl, bl) = leftMost\n",
+    "\t# now that we have the top-left coordinate, use it as an\n",
+    "\t# anchor to calculate the Euclidean distance between the\n",
+    "\t# top-left and right-most points; by the Pythagorean\n",
+    "\t# theorem, the point with the largest distance will be\n",
+    "\t# our bottom-right point\n",
+    "\tD = dist.cdist(tl[np.newaxis], rightMost, \"euclidean\")[0]\n",
+    "\t(br, tr) = rightMost[np.argsort(D)[::-1], :]\n",
+    "\t# return the coordinates in top-left, top-right,\n",
+    "\t# bottom-right, and bottom-left order\n",
+    "\treturn np.array([tl, tr, br, bl], dtype=\"float32\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -265,14 +294,17 @@
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb Cell 13'\u001b[0m in \u001b[0;36m<cell line: 29>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000010?line=25'>26</a>\u001b[0m cv2\u001b[39m.\u001b[39mimshow(\u001b[39m'\u001b[39m\u001b[39mCorners\u001b[39m\u001b[39m'\u001b[39m, input_img)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000010?line=26'>27</a>\u001b[0m cv2\u001b[39m.\u001b[39mwaitKey(\u001b[39m10\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000010?line=28'>29</a>\u001b[0m perspective_transform(corners)\n",
+      "\u001b[1;32m/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb Cell 12'\u001b[0m in \u001b[0;36mperspective_transform\u001b[0;34m(corners)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000014?line=3'>4</a>\u001b[0m warped_cols \u001b[39m=\u001b[39m \u001b[39m595\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000014?line=5'>6</a>\u001b[0m warped_points \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([[\u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m], [\u001b[39m0\u001b[39m, warped_rows], [warped_cols, warped_rows], [warped_cols, \u001b[39m0\u001b[39m]], np\u001b[39m.\u001b[39mfloat32)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000014?line=7'>8</a>\u001b[0m ordered_corners \u001b[39m=\u001b[39m order_points(corners)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000014?line=9'>10</a>\u001b[0m warped_input \u001b[39m=\u001b[39m input_img\u001b[39m.\u001b[39mcopy()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000014?line=11'>12</a>\u001b[0m \u001b[39mif\u001b[39;00m(\u001b[39mlen\u001b[39m(ordered_corners) \u001b[39m==\u001b[39m \u001b[39m4\u001b[39m):\n",
+      "\u001b[1;32m/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb Cell 11'\u001b[0m in \u001b[0;36morder_points\u001b[0;34m(pts)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000015?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39morder_points\u001b[39m(pts):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000015?line=1'>2</a>\u001b[0m \t\u001b[39m# sort the points based on their x-coordinates\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000015?line=2'>3</a>\u001b[0m \txSorted \u001b[39m=\u001b[39m pts[np\u001b[39m.\u001b[39margsort(pts[:, \u001b[39m0\u001b[39;49m]), :]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000015?line=3'>4</a>\u001b[0m \t\u001b[39m# grab the left-most and right-most points from the sorted\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000015?line=4'>5</a>\u001b[0m \t\u001b[39m# x-roodinate points\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000015?line=5'>6</a>\u001b[0m \tleftMost \u001b[39m=\u001b[39m xSorted[:\u001b[39m2\u001b[39m, :]\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     ]
     }
    ],
    "source": [
@@ -304,7 +336,7 @@
     "cv2.imshow('Corners', input_img)\n",
     "cv2.waitKey(10)\n",
     "\n",
-    "# perspective_transform(corners)\n",
+    "perspective_transform(corners)\n",
     "\n",
     "\n",
     "\n"
@@ -316,28 +348,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def order_points(pts):\n",
-    "    # initialzie a list of coordinates that will be ordered\n",
-    "    # such that the first entry in the list is the top-left,\n",
-    "    # the second entry is the top-right, the third is the\n",
-    "    # bottom-right, and the fourth is the bottom-left\n",
-    "    rect = np.zeros((4, 2), dtype = \"float32\")\n",
+    "# def order_points(pts):\n",
+    "#     # initialzie a list of coordinates that will be ordered\n",
+    "#     # such that the first entry in the list is the top-left,\n",
+    "#     # the second entry is the top-right, the third is the\n",
+    "#     # bottom-right, and the fourth is the bottom-left\n",
+    "#     rect = np.zeros((4, 2), dtype = \"float32\")\n",
     "\n",
-    "    # the top-left point will have the smallest sum, whereas\n",
-    "    # the bottom-right point will have the largest sum\n",
-    "    s = pts.sum(axis = 1)\n",
-    "    rect[0] = pts[np.argmin(s)]\n",
-    "    rect[2] = pts[np.argmax(s)]\n",
+    "#     # the top-left point will have the smallest sum, whereas\n",
+    "#     # the bottom-right point will have the largest sum\n",
+    "#     s = pts.sum(axis = 1)\n",
+    "#     rect[0] = pts[np.argmin(s)]\n",
+    "#     rect[2] = pts[np.argmax(s)]\n",
     "\n",
-    "    # now, compute the difference between the points, the\n",
-    "    # top-right point will have the smallest difference,\n",
-    "    # whereas the bottom-left will have the largest difference\n",
-    "    diff = np.diff(pts, axis = 1)\n",
-    "    rect[1] = pts[np.argmin(diff)]\n",
-    "    rect[3] = pts[np.argmax(diff)]\n",
+    "#     # now, compute the difference between the points, the\n",
+    "#     # top-right point will have the smallest difference,\n",
+    "#     # whereas the bottom-left will have the largest difference\n",
+    "#     diff = np.diff(pts, axis = 1)\n",
+    "#     rect[1] = pts[np.argmin(diff)]\n",
+    "#     rect[3] = pts[np.argmax(diff)]\n",
     "\n",
-    "    # return the ordered coordinates\n",
-    "    return rect\n",
+    "#     # return the ordered coordinates\n",
+    "#     return rect\n",
     "\n",
     "def four_point_transform(image, pts):\n",
     "    # obtain a consistent order of the points and unpack them\n",
