--- a/document-scanner.ipynb
+++ b/document-scanner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,20 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "rng.seed(12345)\n",
     "\n",
     "# read and show the input image\n",
-    "img_path = 'document-2.png'\n",
+    "img_path = 'document.jpeg'\n",
     "img = cv2.imread(img_path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,85 +226,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def order_points(pts):\n",
-    "\t# sort the points based on their x-coordinates\n",
-    "\txSorted = pts[np.argsort(pts[:, 0]), :]\n",
-    "\t# grab the left-most and right-most points from the sorted\n",
-    "\t# x-roodinate points\n",
-    "\tleftMost = xSorted[:2, :]\n",
-    "\trightMost = xSorted[2:, :]\n",
-    "\t# now, sort the left-most coordinates according to their\n",
-    "\t# y-coordinates so we can grab the top-left and bottom-left\n",
-    "\t# points, respectively\n",
-    "\tleftMost = leftMost[np.argsort(leftMost[:, 1]), :]\n",
-    "\t(tl, bl) = leftMost\n",
-    "\t# now that we have the top-left coordinate, use it as an\n",
-    "\t# anchor to calculate the Euclidean distance between the\n",
-    "\t# top-left and right-most points; by the Pythagorean\n",
-    "\t# theorem, the point with the largest distance will be\n",
-    "\t# our bottom-right point\n",
-    "\tD = dist.cdist(tl[np.newaxis], rightMost, \"euclidean\")[0]\n",
-    "\t(br, tr) = rightMost[np.argsort(D)[::-1], :]\n",
-    "\t# return the coordinates in top-left, top-right,\n",
-    "\t# bottom-right, and bottom-left order\n",
-    "\treturn np.array([tl, tr, br, bl], dtype=\"float32\")"
+    "# def order_points(points):\n",
+    "# \t# convert list of tuples to list of list\n",
+    "# \tpts = [list(ele) for ele in points]\n",
+    "# \t# sort the points based on their x-coordinates\n",
+    "# \txSorted = pts[np.argsort(pts[:, 0]), :]\n",
+    "# \t# grab the left-most and right-most points from the sorted\n",
+    "# \t# x-roodinate points\n",
+    "# \tleftMost = xSorted[:2, :]\n",
+    "# \trightMost = xSorted[2:, :]\n",
+    "# \t# now, sort the left-most coordinates according to their\n",
+    "# \t# y-coordinates so we can grab the top-left and bottom-left\n",
+    "# \t# points, respectively\n",
+    "# \tleftMost = leftMost[np.argsort(leftMost[:, 1]), :]\n",
+    "# \t(tl, bl) = leftMost\n",
+    "# \t# now that we have the top-left coordinate, use it as an\n",
+    "# \t# anchor to calculate the Euclidean distance between the\n",
+    "# \t# top-left and right-most points; by the Pythagorean\n",
+    "# \t# theorem, the point with the largest distance will be\n",
+    "# \t# our bottom-right point\n",
+    "# \tD = dist.cdist(tl[np.newaxis], rightMost, \"euclidean\")[0]\n",
+    "# \t(br, tr) = rightMost[np.argsort(D)[::-1], :]\n",
+    "# \t# return the coordinates in top-left, top-right,\n",
+    "# \t# bottom-right, and bottom-left order\n",
+    "# \treturn np.array([tl, tr, br, bl], dtype=\"float32\")\n",
+    "def order_points(points: list):\n",
+    "\t# initialzie a list of coordinates that will be ordered\n",
+    "\t# such that the first entry in the list is the top-left,\n",
+    "\t# the second entry is the top-right, the third is the\n",
+    "\t# bottom-right, and the fourth is the bottom-left\n",
+    "\trect = np.zeros((4, 2), dtype = \"float32\")\n",
+    "\t# the top-left point will have the smallest sum, whereas\n",
+    "\t# the bottom-right point will have the largest sum\n",
+    "\tpts = np.array(points)\n",
+    "\ts = pts.sum(axis = 1)\n",
+    "\trect[0] = pts[np.argmin(s)]\n",
+    "\trect[2] = pts[np.argmax(s)]\n",
+    "\t# now, compute the difference between the points, the\n",
+    "\t# top-right point will have the smallest difference,\n",
+    "\t# whereas the bottom-left will have the largest difference\n",
+    "\tdiff = np.diff(pts, axis = 1)\n",
+    "\trect[1] = pts[np.argmin(diff)]\n",
+    "\trect[3] = pts[np.argmax(diff)]\n",
+    "\t# return the ordered coordinates\n",
+    "\treturn rect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def perspective_transform(corners): \n",
-    "  # perform image transformation\n",
-    "  warped_rows = 842\n",
-    "  warped_cols = 595\n",
+    "# def perspective_transform(corners): \n",
+    "#   # perform image transformation\n",
+    "#   warped_rows = 842\n",
+    "#   warped_cols = 595\n",
     "\n",
-    "  warped_points = np.array([[0, 0], [0, warped_rows], [warped_cols, warped_rows], [warped_cols, 0]], np.float32)\n",
+    "#   warped_points = np.array([[0, 0], [0, warped_rows], [warped_cols, warped_rows], [warped_cols, 0]], np.float32)\n",
     "\n",
-    "  ordered_corners = order_points(corners)\n",
+    "#   ordered_corners = order_points(corners)\n",
     "\n",
-    "  warped_input = input_img.copy()\n",
+    "#   warped_input = input_img.copy()\n",
     "\n",
-    "  if(len(ordered_corners) == 4):\n",
-    "    print('corners', ordered_corners)\n",
-    "    homography = cv2.findHomography(ordered_corners, warped_points)[0]\n",
-    "    warped_result = cv2.warpPerspective(warped_input,homography, (warped_cols, warped_rows))\n",
-    "    cv2.imshow(\"warp input: \", warped_input)\n",
-    "    cv2.imshow(\"Transformed Image\", warped_result)\n",
-    "    cv2.waitKey(10)"
+    "#   if(len(ordered_corners) == 4):\n",
+    "#     print('corners', ordered_corners)\n",
+    "#     homography = cv2.findHomography(ordered_corners, warped_points)[0]\n",
+    "#     warped_result = cv2.warpPerspective(warped_input,homography, (warped_cols, warped_rows))\n",
+    "#     cv2.imshow(\"warp input: \", warped_input)\n",
+    "#     cv2.imshow(\"Transformed Image\", warped_result)\n",
+    "#     cv2.waitKey(10)\n",
+    "\n",
+    "def four_point_transform(image, pts):\n",
+    "\t# obtain a consistent order of the points and unpack them\n",
+    "\t# individually\n",
+    "\trect = order_points(pts)\n",
+    "\t(tl, tr, br, bl) = rect\n",
+    "\t# compute the width of the new image, which will be the\n",
+    "\t# maximum distance between bottom-right and bottom-left\n",
+    "\t# x-coordiates or the top-right and top-left x-coordinates\n",
+    "\twidthA = np.sqrt(((br[0] - bl[0]) ** 2) + ((br[1] - bl[1]) ** 2))\n",
+    "\twidthB = np.sqrt(((tr[0] - tl[0]) ** 2) + ((tr[1] - tl[1]) ** 2))\n",
+    "\t# maxWidth = max(int(widthA), int(widthB))\n",
+    "\tmaxWidth = 595\n",
+    "\n",
+    "\t# compute the height of the new image, which will be the\n",
+    "\t# maximum distance between the top-right and bottom-right\n",
+    "\t# y-coordinates or the top-left and bottom-left y-coordinates\n",
+    "\theightA = np.sqrt(((tr[0] - br[0]) ** 2) + ((tr[1] - br[1]) ** 2))\n",
+    "\theightB = np.sqrt(((tl[0] - bl[0]) ** 2) + ((tl[1] - bl[1]) ** 2))\n",
+    "\t# maxHeight = max(int(heightA), int(heightB))\n",
+    "\tmaxHeight = 842\n",
+    "\n",
+    "\t# now that we have the dimensions of the new image, construct\n",
+    "\t# the set of destination points to obtain a \"birds eye view\",\n",
+    "\t# (i.e. top-down view) of the image, again specifying points\n",
+    "\t# in the top-left, top-right, bottom-right, and bottom-left\n",
+    "\t# order\n",
+    "\tdst = np.array([\n",
+    "\t\t[0, 0],\n",
+    "\t\t[maxWidth - 1, 0],\n",
+    "\t\t[maxWidth - 1, maxHeight - 1],\n",
+    "\t\t[0, maxHeight - 1]], dtype = \"float32\")\n",
+    "\t# compute the perspective transform matrix and then apply it\n",
+    "\tM = cv2.getPerspectiveTransform(rect, dst)\n",
+    "\twarped = cv2.warpPerspective(image, M, (maxWidth, maxHeight))\n",
+    "\t# return the warped image\n",
+    "\treturn warped\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FINAL CORNERS:  [(11.0, 33.077922077922075), (11.0, 497.0), (357.1346747999683, 28.58266656103937), (342.8536585365854, 497.0)]\n"
+      "FINAL CORNERS:  [(302.82718046771583, 105.01088395352258), (70.4431654676259, 101.95319954562666), (362.9244585314316, 448.9719009564914), (31.33740541205628, 459.0505347899071)]\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb Cell 13'\u001b[0m in \u001b[0;36m<cell line: 29>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000010?line=25'>26</a>\u001b[0m cv2\u001b[39m.\u001b[39mimshow(\u001b[39m'\u001b[39m\u001b[39mCorners\u001b[39m\u001b[39m'\u001b[39m, input_img)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000010?line=26'>27</a>\u001b[0m cv2\u001b[39m.\u001b[39mwaitKey(\u001b[39m10\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000010?line=28'>29</a>\u001b[0m perspective_transform(corners)\n",
-      "\u001b[1;32m/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb Cell 12'\u001b[0m in \u001b[0;36mperspective_transform\u001b[0;34m(corners)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000014?line=3'>4</a>\u001b[0m warped_cols \u001b[39m=\u001b[39m \u001b[39m595\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000014?line=5'>6</a>\u001b[0m warped_points \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([[\u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m], [\u001b[39m0\u001b[39m, warped_rows], [warped_cols, warped_rows], [warped_cols, \u001b[39m0\u001b[39m]], np\u001b[39m.\u001b[39mfloat32)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000014?line=7'>8</a>\u001b[0m ordered_corners \u001b[39m=\u001b[39m order_points(corners)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000014?line=9'>10</a>\u001b[0m warped_input \u001b[39m=\u001b[39m input_img\u001b[39m.\u001b[39mcopy()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000014?line=11'>12</a>\u001b[0m \u001b[39mif\u001b[39;00m(\u001b[39mlen\u001b[39m(ordered_corners) \u001b[39m==\u001b[39m \u001b[39m4\u001b[39m):\n",
-      "\u001b[1;32m/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb Cell 11'\u001b[0m in \u001b[0;36morder_points\u001b[0;34m(pts)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000015?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39morder_points\u001b[39m(pts):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000015?line=1'>2</a>\u001b[0m \t\u001b[39m# sort the points based on their x-coordinates\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000015?line=2'>3</a>\u001b[0m \txSorted \u001b[39m=\u001b[39m pts[np\u001b[39m.\u001b[39margsort(pts[:, \u001b[39m0\u001b[39;49m]), :]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000015?line=3'>4</a>\u001b[0m \t\u001b[39m# grab the left-most and right-most points from the sorted\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000015?line=4'>5</a>\u001b[0m \t\u001b[39m# x-roodinate points\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000015?line=5'>6</a>\u001b[0m \tleftMost \u001b[39m=\u001b[39m xSorted[:\u001b[39m2\u001b[39m, :]\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/karanhejmadi/opt/anaconda3/envs/scanner/lib/python3.10/site-packages/skimage/_shared/utils.py:348: RuntimeWarning: Images with dimensions (M, N, 3) are interpreted as 2D+RGB by default. Use `multichannel=False` to interpret as 3D image with last dimension of length 3.\n",
+      "  return func(*args, **kwargs)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -336,7 +400,18 @@
     "cv2.imshow('Corners', input_img)\n",
     "cv2.waitKey(10)\n",
     "\n",
-    "perspective_transform(corners)\n",
+    "# perspective_transform(corners)\n",
+    "\n",
+    "warped_img = four_point_transform(img_copy, corners)\n",
+    "\n",
+    "cv2.imshow(\"warped img\", warped_img)\n",
+    "cv2.waitKey(10)\n",
+    "\n",
+    "# give a black and white feel to the image\n",
+    "T = threshold_local(warped_img, 11, offset = 10, method = \"gaussian\")\n",
+    "warped = (warped_img > T).astype(\"uint8\") * 255\n",
+    "cv2.imshow(\"Scanned\", imutils.resize(warped, height = 842))\n",
+    "cv2.waitKey(10)\n",
     "\n",
     "\n",
     "\n"
