--- a/document-scanner.ipynb
+++ b/document-scanner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -353,20 +353,12 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/karanhejmadi/opt/anaconda3/envs/scanner/lib/python3.10/site-packages/skimage/_shared/utils.py:348: RuntimeWarning: Images with dimensions (M, N, 3) are interpreted as 2D+RGB by default. Use `multichannel=False` to interpret as 3D image with last dimension of length 3.\n",
-      "  return func(*args, **kwargs)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "-1"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,108 +400,14 @@
     "cv2.waitKey(10)\n",
     "\n",
     "# give a black and white feel to the image\n",
-    "T = threshold_local(warped_img, 11, offset = 10, method = \"gaussian\")\n",
-    "warped = (warped_img > T).astype(\"uint8\") * 255\n",
-    "cv2.imshow(\"Scanned\", imutils.resize(warped, height = 842))\n",
-    "cv2.waitKey(10)\n",
+    "# T = threshold_local(warped_img, 11, offset = 10, method = \"gaussian\")\n",
+    "# warped = (warped_img > T).astype(\"uint8\") * 255\n",
+    "# cv2.imshow(\"Scanned\", imutils.resize(warped, height = 842))\n",
+    "# cv2.waitKey(0)\n",
+    "# cv2.destroyAllWindows()\n",
     "\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def order_points(pts):\n",
-    "#     # initialzie a list of coordinates that will be ordered\n",
-    "#     # such that the first entry in the list is the top-left,\n",
-    "#     # the second entry is the top-right, the third is the\n",
-    "#     # bottom-right, and the fourth is the bottom-left\n",
-    "#     rect = np.zeros((4, 2), dtype = \"float32\")\n",
-    "\n",
-    "#     # the top-left point will have the smallest sum, whereas\n",
-    "#     # the bottom-right point will have the largest sum\n",
-    "#     s = pts.sum(axis = 1)\n",
-    "#     rect[0] = pts[np.argmin(s)]\n",
-    "#     rect[2] = pts[np.argmax(s)]\n",
-    "\n",
-    "#     # now, compute the difference between the points, the\n",
-    "#     # top-right point will have the smallest difference,\n",
-    "#     # whereas the bottom-left will have the largest difference\n",
-    "#     diff = np.diff(pts, axis = 1)\n",
-    "#     rect[1] = pts[np.argmin(diff)]\n",
-    "#     rect[3] = pts[np.argmax(diff)]\n",
-    "\n",
-    "#     # return the ordered coordinates\n",
-    "#     return rect\n",
-    "\n",
-    "def four_point_transform(image, pts):\n",
-    "    # obtain a consistent order of the points and unpack them\n",
-    "    # individually\n",
-    "    rect = order_points(pts)\n",
-    "    (tl, tr, br, bl) = rect\n",
-    "\n",
-    "    # compute the width of the new image, which will be the\n",
-    "    # maximum distance between bottom-right and bottom-left\n",
-    "    # x-coordiates or the top-right and top-left x-coordinates\n",
-    "    widthA = np.sqrt(((br[0] - bl[0]) ** 2) + ((br[1] - bl[1]) ** 2))\n",
-    "    widthB = np.sqrt(((tr[0] - tl[0]) ** 2) + ((tr[1] - tl[1]) ** 2))\n",
-    "    maxWidth = max(int(widthA), int(widthB))\n",
-    "\n",
-    "    # compute the height of the new image, which will be the\n",
-    "    # maximum distance between the top-right and bottom-right\n",
-    "    # y-coordinates or the top-left and bottom-left y-coordinates\n",
-    "    heightA = np.sqrt(((tr[0] - br[0]) ** 2) + ((tr[1] - br[1]) ** 2))\n",
-    "    heightB = np.sqrt(((tl[0] - bl[0]) ** 2) + ((tl[1] - bl[1]) ** 2))\n",
-    "    maxHeight = max(int(heightA), int(heightB))\n",
-    "\n",
-    "    # now that we have the dimensions of the new image, construct\n",
-    "    # the set of destination points to obtain a \"birds eye view\",\n",
-    "    # (i.e. top-down view) of the image, again specifying points\n",
-    "    # in the top-left, top-right, bottom-right, and bottom-left\n",
-    "    # order\n",
-    "    dst = np.array([\n",
-    "        [0, 0],\n",
-    "        [maxWidth - 1, 0],\n",
-    "        [maxWidth - 1, maxHeight - 1],\n",
-    "        [0, maxHeight - 1]], dtype = \"float32\")\n",
-    "\n",
-    "    # compute the perspective transform matrix and then apply it\n",
-    "    M = cv2.getPerspectiveTransform(rect, dst)\n",
-    "    warped = cv2.warpPerspective(image, M, (maxWidth, maxHeight))\n",
-    "\n",
-    "    # return the warped image\n",
-    "    return warped"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# apply four point transform to extract the document rectangle\n",
-    "warped = four_point_transform(org, doc.reshape(4, 2) * ratio)\n",
-    "warped = cv2.cvtColor(warped, cv2.COLOR_BGR2GRAY)\n",
-    "cv2.imshow(\"Warped\", imutils.resize(warped, height = 650))\n",
-    "cv2.waitKey(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# give a black and white feel to the image\n",
-    "T = threshold_local(warped, 11, offset = 10, method = \"gaussian\")\n",
-    "warped = (warped > T).astype(\"uint8\") * 255\n",
-    "cv2.imshow(\"Scanned\", imutils.resize(warped, height = 650))\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
    ]
   }
  ],
